fixed overflow

--- a/styles/balance.css
+++ b/styles/balance.css
@@ -57,6 +57,8 @@
     margin-top: 180px;
     left: -14px;
     transform: scale(0.8);
+    flex-wrap: wrap;
+    display: flex;
 }
 
 .boxRight {
@@ -69,6 +71,8 @@
     margin-top: 180px;
     margin-left: 60px;
     transform: scale(0.8);
+    flex-wrap: wrap;
+    display: flex;
 }
 
 #circleShape {
